--- a/normalize.css
+++ b/normalize.css
@@ -8,13 +8,16 @@
  * 2. Correct the line height in all browsers.
  * 3. Prevent adjustments of font size after orientation changes in
  *    IE on Windows Phone and in iOS.
+ * 4. Set tap highlight color to transparent
  */
 
 html {
-  font-family: sans-serif; /* 1 */
-  line-height: 1.15; /* 2 */
-  -ms-text-size-adjust: 100%; /* 3 */
+  font-size: 16px;
+  font-family: 'HanHei SC', 'PingFang SC', 'Helvetica Neue', 'Helvetica', 'STHeitiSC-Light', 'Arial', sans-serif;
+  line-height: 1.5; /* 2 */
   -webkit-text-size-adjust: 100%; /* 3 */
+  -webkit-tap-highlight-color: transparent; /* 4 */
+  text-rendering: optimizelegibility;
 }
 
 /* Sections
@@ -254,10 +257,11 @@ input,
 optgroup,
 select,
 textarea {
-  font-family: sans-serif; /* 1 */
+  font-family: inherit; /* 1 */
   font-size: 100%; /* 1 */
-  line-height: 1.15; /* 1 */
+  line-height: 1.5; /* 1 */
   margin: 0; /* 2 */
+  outline: none;
 }
 
 /**
@@ -268,6 +272,8 @@ textarea {
 button,
 input { /* 1 */
   overflow: visible;
+  border: none;
+  border-radius: 0;
 }
 
 /**
@@ -291,29 +297,6 @@ html [type="button"], /* 1 */
 [type="reset"],
 [type="submit"] {
   -webkit-appearance: button; /* 2 */
-}
-
-/**
- * Remove the inner border and padding in Firefox.
- */
-
-button::-moz-focus-inner,
-[type="button"]::-moz-focus-inner,
-[type="reset"]::-moz-focus-inner,
-[type="submit"]::-moz-focus-inner {
-  border-style: none;
-  padding: 0;
-}
-
-/**
- * Restore the focus styles unset by the previous rule.
- */
-
-button:-moz-focusring,
-[type="button"]:-moz-focusring,
-[type="reset"]:-moz-focusring,
-[type="submit"]:-moz-focusring {
-  outline: 1px dotted ButtonText;
 }
 
 /**
@@ -360,6 +343,11 @@ textarea {
   overflow: auto;
 }
 
+table {
+  border-collapse: collapse;
+  border-spacing: 0;
+}
+
 /**
  * 1. Add the correct box sizing in IE 10-.
  * 2. Remove the padding in IE 10-.
@@ -399,6 +387,15 @@ textarea {
   -webkit-appearance: none;
 }
 
+input::-webkit-input-placeholder {
+  color: #999;
+  line-height: inherit;
+  -webkit-transform: scale(0.82);
+  transform: scale(0.82);
+  -webkit-transform-origin: left center;
+  transform-origin: left center;
+}
+
 /**
  * 1. Correct the inability to style clickable types in iOS and Safari.
  * 2. Change font properties to `inherit` in Safari.
@@ -420,6 +417,7 @@ textarea {
 details, /* 1 */
 menu {
   display: block;
+  outline: none;
 }
 
 /*
